<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/qg_emblem" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/welcome_back"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/signedAs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/loginas" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewgcgc"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/high_general" />

                <ImageView
                    android:id="@+id/tickgcgc"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/correct2" />

                <TextView
                    android:id="@+id/GC_Correct"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0" />

                <ImageView
                    android:id="@+id/crossgcgc"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="20dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/false2" />

                <TextView
                    android:id="@+id/GC_False"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewmvmv"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/high_art" />

                <ImageView
                    android:id="@+id/tickmvmv"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/correct2" />

                <TextView
                    android:id="@+id/MV_Correct"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0" />

                <ImageView
                    android:id="@+id/crossmvmv"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="20dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/false2" />

                <TextView
                    android:id="@+id/MV_False"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewanm"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/high_ani" />

                <ImageView
                    android:id="@+id/tickanm"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/correct2" />

                <TextView
                    android:id="@+id/ANM_Correct"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0" />

                <ImageView
                    android:id="@+id/crossanm"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="20dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/false2" />

                <TextView
                    android:id="@+id/ANM_False"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/buttonGeneral"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/high_general" />

        <Button
            android:id="@+id/buttonMovies"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/high_art" />

        <Button
            android:id="@+id/buttonAnime"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/high_ani" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/button_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>